<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_cast_see_more_list_image"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:scaleType="centerCrop"
        android:src="@drawable/cast_example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <TextView
        android:id="@+id/item_cast_see_more_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/black"
        android:text="@string/movie_cast_name_example"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="@id/item_cast_see_more_list_image"
        app:layout_constraintStart_toEndOf="@id/item_cast_see_more_list_image"/>

    <TextView
        android:id="@+id/item_cast_see_more_list_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_profession_example"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@id/item_cast_see_more_list_name"
        app:layout_constraintTop_toBottomOf="@id/item_cast_see_more_list_name"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/item_cast_see_more_list_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_19"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/movie_character_example"
        app:layout_constraintTop_toBottomOf="@id/item_cast_see_more_list_profession"
        app:layout_constraintStart_toStartOf="@id/item_cast_see_more_list_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>